charts/deviceedge/console/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openshift-console-deployment
  labels:
    app: openshift-console
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openshift-console
  template:
    metadata:
      labels:
        app: openshift-console
    spec:
      containers:
      - name: openshift-console-app
        image: quay.io/openshift/origin-console:4.13.0
