charts/deviceedge/console/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openshift-console-service
spec:
  selector:
    app: openshift-console
  ports:
  - port: 80
    targetPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: kube-api
spec:
  selector:
    app: flannel
  ports:
  - port: 6443
    targetPort: 6443
