charts/deviceedge/console/templates/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: openshift-console
spec:
  to:
    kind: Service
    name: openshift-console-service
    weight: 100
  port:
    targetPort: 9000
  wildcardPolicy: None
